Project(TTTAdherensJunctionSegmentationDijkstra)

include_directories( ./include/)
include_directories(../Base/include/)
include_directories(../../Core/include/)
set(TTTAdherensJunctionSegmentationDijkstra_SRCS source/AdherensJunctionSegmentationDijkstraCommand.cpp)

#add_library(TTTAdherensJunctionSegmentationDijkstra ${TTTAdherensJunctionSegmentationDijkstra_SRCS})

